--- a/Contributors.html
+++ b/Contributors.html
@@ -1881,6 +1881,11 @@
           "fullname": "Ankush jagga",
           "username": "https://github.com/AnkushJagga"
       },
+      {
+        "id":347,
+        "fullname": "Dicky",
+        "username": "https://github.com/dickytrianza"
+      },
 ];
 
     const searchbox = document.getElementById('search');
