fingerprint scanner animation

--- a/Contributors.html
+++ b/Contributors.html
@@ -1881,7 +1881,12 @@
           "fullname": "Ankush jagga",
           "username": "https://github.com/AnkushJagga"
       },
-];
+      {
+          "id": 347,
+          "fullname": "Srinjoy Pati",
+          "username": "https://github.com/srinjoy-26"
+      },
+    ];
 
     const searchbox = document.getElementById('search');
     let searchResult = null;
