--- a/Contributors.html
+++ b/Contributors.html
@@ -1893,6 +1893,12 @@
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
       },
+      {
+
+        "id":349,
+        "fullname": "d-coder111",
+        "username": "https://github.com/d-coder111"
+      },
     ];
 
 
