added myself in contribution list

--- a/Contributors.html
+++ b/Contributors.html
@@ -1888,11 +1888,17 @@
         "username": "https://github.com/dickytrianza"
       },
 
-{
+      {
           "id": 347,
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
       },
+      
+      {
+          "id": 349,
+          "fullname": "Bhumit",
+          "username": "https://github.com/BhumitRohilla"
+      }
     ];
 
 
