--- a/Contributors.html
+++ b/Contributors.html
@@ -1881,17 +1881,19 @@
           "fullname": "Ankush jagga",
           "username": "https://github.com/AnkushJagga"
       },
-      {
-
-        "id":348,
-        "fullname": "Dicky",
-        "username": "https://github.com/dickytrianza"
+      {   "id":348,
+          "fullname": "Dicky",
+          "username": "https://github.com/dickytrianza"
       },
-
-{
+      {
           "id": 347,
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
+      }, 
+      {
+        "id": 349,
+        "fullname": "Ananay Dubey",
+        "username": "https://github.com/fts18"
       },
     ];
 
