Updated with harsh1x4's id
Updated with harsh1x4's GitHub link on id: 348

--- a/Contributors.html
+++ b/Contributors.html
@@ -1893,6 +1893,11 @@
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
       },
+      {
+          "id": 348,
+          "fullname": "Harshbardhan Singh",
+          "username": "https://github.com/harsh1x4"
+      },
     ];
 
 
