--- a/Contributors.html
+++ b/Contributors.html
@@ -1893,6 +1893,11 @@
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
       },
+      {
+          "id": 348,
+          "fullname": "Ashwin",
+          "username": "https://github.com/aash96"
+      },
     ];
 
 
