added my name to contributor.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1893,6 +1893,12 @@
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
       },
+      {
+          "id": 348,
+          "fullname": "Arian Shaikh",
+          "username": "https://github.com/arian0zen"
+      },
+
     ];
 
 
