--- a/Contributors.html
+++ b/Contributors.html
@@ -80,7 +80,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1"
         x="0px" y="0px" viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve" role="img"
         aria-labelledby="dyn2wm4vin1xgraye3ggy9kf12oaz8a" class="header__logo" width="50px" height="50px">
-        <title id="dyn2wm4vin1xgraye3ggy9kf12oaz8a">Hacktoberfest</title>
+        <title id="dyn2wm4vin1xgraye3ggy9kf12oaz8a">Hacktoberfest2022</title>
         <style type="text/css">
           .st0 {
             fill: #FF0844;
