--- a/Contributors.html
+++ b/Contributors.html
@@ -1888,10 +1888,16 @@
         "username": "https://github.com/dickytrianza"
       },
 
-{
+      {
           "id": 347,
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
+      },
+      {
+
+        "id":349,
+        "fullname": "Mayank",
+        "username": "https://github.com/mayankdhnkr"
       },
     ];
 
