ADD: Siplest AJAX Application

--- a/Contributors.html
+++ b/Contributors.html
@@ -1887,11 +1887,15 @@
         "fullname": "Dicky",
         "username": "https://github.com/dickytrianza"
       },
-
-{
+      {
           "id": 347,
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
+      },
+      {
+        "id": 349,
+        "fullname": "Kashyap Kumar",
+        "username": "https://github.com/kashyapkumar-pdf"
       },
     ];
 
