--- a/Contributors.html
+++ b/Contributors.html
@@ -1893,6 +1893,11 @@
           "fullname": "Srinjoy Pati",
           "username": "https://github.com/srinjoy-26"
       },
+    {
+        "id": 349,
+        "fullname": "Marcell K",
+        "username": "https://github.com/kissmarcell"
+    },
     ];
 
 
