--- a/Contributors.html
+++ b/Contributors.html
@@ -1897,7 +1897,7 @@
           "id": 349,
           "fullname": "Bhumit",
           "username": "https://github.com/BhumitRohilla"
-      }
+      },
 
       {
 
@@ -1905,6 +1905,13 @@
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
       },
+
+      {
+
+        "id":351,
+        "fullname": "Arpit Ujjwal",
+        "username": "https://github.com/ArpitUjjwal"
+        },
 
     ];
 
