--- a/Contributors.html
+++ b/Contributors.html
@@ -1897,13 +1897,20 @@
           "id": 349,
           "fullname": "Bhumit",
           "username": "https://github.com/BhumitRohilla"
-      }
+      },
 
       {
 
         "id":350,
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
+      },
+
+      {
+
+        "id":351,
+        "fullname": "Srijan Singh",
+        "username": "https://github.com/srijansingh2003"
       },
 
     ];
