--- a/Contributors.html
+++ b/Contributors.html
@@ -1905,6 +1905,12 @@
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
       },
+        {
+
+        "id":351,
+        "fullname": "ritam77",
+        "username": "https://github.com/ritam77"
+      },
 
     ];
 
