--- a/Contributors.html
+++ b/Contributors.html
@@ -1912,6 +1912,12 @@
         "fullname": "Arpit Ujjwal",
         "username": "https://github.com/ArpitUjjwal"
         },
+      {
+
+        "id":352,
+        "fullname": "Amisha Aggarwal",
+        "username": "https://github.com/amishaagg"
+        },
 
     ];
 
