--- a/Contributors.html
+++ b/Contributors.html
@@ -1897,6 +1897,12 @@
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
       },
+      {
+
+        "id":350,
+        "fullname": "Rohit Singh",
+        "username": "https://github.com/rohitsingh2k"
+        },
     ];
 
 
