contributor list added

--- a/Contributors.html
+++ b/Contributors.html
@@ -1907,7 +1907,7 @@
       },
       {
         "id":351,
-        "fullname": "Sayon Som",
+        "fullname": "Sayon som",
         "username": "https://github.com/sayon-som"
       }
 
