Awesome Portfolio/Resume Website Templete

--- a/Contributors.html
+++ b/Contributors.html
@@ -1897,7 +1897,7 @@
           "id": 349,
           "fullname": "Bhumit",
           "username": "https://github.com/BhumitRohilla"
-      }
+      },
 
       {
 
@@ -1905,6 +1905,11 @@
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
       },
+      {
+        "id":351,
+        "fullname": "sainik-khaddar",
+        "username": "https://github.com/sainik-khaddar"
+      }
 
     ];
 
