added hover effects in navbar

--- a/Contributors.html
+++ b/Contributors.html
@@ -98,6 +98,22 @@
         <!-- Menu -->
       </ul>
     </div>
+    <h2>
+        <span><i></i>H</span>
+        <span><i></i>A</span>
+        <span><i></i>C</span>
+        <span><i></i>K</span>
+        <span><i></i>T</span>
+        <span><i></i>O</span>
+        <span><i></i>B</span>
+        <span><i></i>E</span>
+        <span><i></i>R</span>
+        <span><i></i>F</span>
+        <span><i></i>E</span>
+        <span><i></i>S</span>
+        <span><i></i>T</span>
+    
+    </h2>
   </nav>
   <div class="content">
     <div class="container">
