--- a/Contributors.html
+++ b/Contributors.html
@@ -1930,6 +1930,12 @@
         "fullname": "Rohit Singh",
         "username": "https://github.com/rohitsingh2k"
         },
+        {
+
+        "id":354,
+        "fullname": "Soumalya Mukherjee",
+        "username": "https://github.com/SoumalyaM"
+        },
     ];
 
 
