Awesome Portfolio/Resume Website Templete

--- a/Contributors.html
+++ b/Contributors.html
@@ -1897,7 +1897,7 @@
           "id": 349,
           "fullname": "Bhumit",
           "username": "https://github.com/BhumitRohilla"
-      }
+      },
 
       {
 
@@ -1905,6 +1905,37 @@
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
       },
+      {
+
+"id":351,
+"fullname": "ritam77",
+"username": "https://github.com/ritam77"
+},
+
+{
+
+"id":351,
+"fullname": "Arpit Ujjwal",
+"username": "https://github.com/ArpitUjjwal"
+},
+{
+
+"id":352,
+"fullname": "Amisha Aggarwal",
+"username": "https://github.com/amishaagg"
+},
+{
+
+"id":353,
+"fullname": "Rohit Singh",
+"username": "https://github.com/rohitsingh2k"
+},
+{
+
+"id":353,
+"fullname": "Sainik Khaddar",
+"username": "https://github.com/sainik-khaddar"
+},
 
     ];
 
