--- a/Contributors.html
+++ b/Contributors.html
@@ -1936,6 +1936,12 @@
         "fullname": "Soumalya Mukherjee",
         "username": "https://github.com/SoumalyaM"
         },
+        {
+
+        "id":355,
+        "fullname": "Adithyan Madhu",
+        "username": "https://github.com/scopophobic"
+        },
     ];
 
 
