add my name in Contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1936,6 +1936,11 @@
         "fullname": "Soumalya Mukherjee",
         "username": "https://github.com/SoumalyaM"
         },
+        {
+        "id":355,
+        "fullname": "Devano Fahrurossi",
+        "username": "https://github.com/Krypt9x",
+        },
     ];
 
 
