Added a mergeSort algo that helps sort one array wrt to other

--- a/Contributors.html
+++ b/Contributors.html
@@ -1947,6 +1947,11 @@
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
         }
+        {
+            "id": 356,
+            "fullname": "Divyansh Gaba",
+            "username": "https://github,com/divyansh10108"
+        }
     ];
 
 
