--- a/Contributors.html
+++ b/Contributors.html
@@ -1945,8 +1945,11 @@
         {
           "id":355,
           "fullname": "Smit Shah",
-          "username": "https://github,com/smit-sms"
-        }
+          "username": "https://github.com/smit-sms"
+        },
+	  "id":356,
+	  "fullname": "Muhamad Taufiq",
+	  "username": "https://github.com/taufiqhida"
     ];
 
 
