--- a/Contributors.html
+++ b/Contributors.html
@@ -1945,7 +1945,12 @@
         {
           "id":355,
           "fullname": "Smit Shah",
-          "username": "https://github,com/smit-sms"
+          "username": "https://github.com/smit-sms"
+        },
+        {
+          "id":356,
+          "fullname": "Harshit Maurya",
+          "username": "https://github.com/H-Maurya"
         }
     ];
 
