--- a/Contributors.html
+++ b/Contributors.html
@@ -1946,7 +1946,13 @@
           "id":355,
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
-        }
+        },
+	{
+	    "id":356,
+	    "fullname": "Ayush Kumar Singh",
+	    "username": "https://github.com/happyhearthacker"
+	 }
+	
     ];
 
 
