--- a/Contributors.html
+++ b/Contributors.html
@@ -1946,6 +1946,11 @@
           "id":355,
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
+        },
+        {
+          "id":356,
+          "fullname": "Seta Murdha",
+          "username": "https://github.com/SetaMurdha"
         }
     ];
 
