--- a/Contributors.html
+++ b/Contributors.html
@@ -1948,7 +1948,12 @@
           "username": "https://github,com/smit-sms"
         }
     ];
-
+{
+          "id":356,
+          "fullname": "Anurag Roy",
+          "username": "https://github.com/AnuragRoy485"
+        }
+    ];
 
     const searchbox = document.getElementById('search');
     let searchResult = null;
