--- a/Contributors.html
+++ b/Contributors.html
@@ -1947,6 +1947,11 @@
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
         }
+        {
+            "id": 356,
+            "fullname": "Nalin Kashyap",
+            "username": "https://github.com/Nkashyap-anand"
+        }
     ];
 
 
