--- a/Contributors.html
+++ b/Contributors.html
@@ -1947,6 +1947,11 @@
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
         }
+	{
+        "id": 366,
+        "fullname": "N Amarnath Rao",
+        "username": "https://github.com/Amarnath-Rao"
+      },
     ];
 
 
