--- a/Contributors.html
+++ b/Contributors.html
@@ -1946,7 +1946,12 @@
           "id":355,
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
-        }
+        },
+        {
+          "id":356,
+          "fullname": "Ajitesh Sarangi",
+          "username": "https://github.com/ajiteshsarangi"
+	 }
     ];
 
 
