--- a/Contributors.html
+++ b/Contributors.html
@@ -1947,6 +1947,11 @@
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
         }
+        {
+          "id":356,
+          "fullname": "Shivansh Kumar Dubey",
+          "username": "https://github.com/shivanshdubey-232"
+        }
     ];
 
 
