--- a/Contributors.html
+++ b/Contributors.html
@@ -1947,6 +1947,12 @@
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
         }
+	{
+
+        "id":356,
+        "fullname": "Vipanshu Suman",
+        "username": "https://github.com/vipu18"
+        },
     ];
 
 
