--- a/Contributors.html
+++ b/Contributors.html
@@ -1946,6 +1946,11 @@
           "id":355,
           "fullname": "Smit Shah",
           "username": "https://github,com/smit-sms"
+        }, 
+        {
+          "id":356,
+          "fullname": "Amit Sadanand Shanbhag",
+          "username": "https://github.com/shanamit161998"
         }
     ];
 
