--- a/Contributors.html
+++ b/Contributors.html
@@ -156,6 +156,12 @@
 
     // Contributors array
     const contributors = [
+	     {
+        "id": 0,
+        "fullname": "Hussain Lohawala",
+        "username": "https://github.com/H9660"
+      },
+	    
       {
         "id": 1,
         "fullname": "Anmol Agarwal",
