--- a/Contributors.html
+++ b/Contributors.html
@@ -1951,7 +1951,12 @@
           "id":356,
           "fullname": "Shivam",
           "username": "https://github.com/shivamRamani"
-        }
+        },
+        {
+          "id":357,
+          "fullname": "Cold",
+          "username": "https://github.com/Code-Egg"
+        }	    
     ];
 
 
