added my name and fixed some tabulations in the file Contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1,10 +1,3 @@
-
-      {
-	  "id": 348,
-	  "fullname": "Smit Shah",
-	  "username": "https://github.com/smit-sms"
-      }
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -1899,7 +1892,7 @@
           "username": "https://github.com/srinjoy-26"
       },
 
-      
+
       {
           "id": 349,
           "fullname": "Bhumit",
@@ -1912,7 +1905,7 @@
         "fullname": "d-coder111",
         "username": "https://github.com/d-coder111"
       },
-        {
+      {
 
         "id":351,
         "fullname": "ritam77",
@@ -1924,39 +1917,46 @@
         "id":351,
         "fullname": "Arpit Ujjwal",
         "username": "https://github.com/ArpitUjjwal"
-        },
+
+      },
       {
 
         "id":352,
         "fullname": "Amisha Aggarwal",
         "username": "https://github.com/amishaagg"
-        },
-        {
+      },
+      {
 
         "id":353,
         "fullname": "Rohit Singh",
         "username": "https://github.com/rohitsingh2k"
-        },
-        {
-          "id":354,
-          "fullname": "Soumalya Mukherjee",
-          "username": "https://github.com/SoumalyaM"
-        },
-        {
-          "id":355,
-          "fullname": "Smit Shah",
-          "username": "https://github,com/smit-sms"
-        },
-        {
-          "id":356,
-          "fullname": "Shivam",
-          "username": "https://github.com/shivamRamani"
-        },
-	{
-          "id":357,
-          "fullname": "Nabeel Hussain M N",
-          "username": "https://github.com/nabeel001"
-        }
+      },
+      {
+        "id":354,
+        "fullname": "Soumalya Mukherjee",
+        "username": "https://github.com/SoumalyaM"
+      },
+      {
+        "id":355,
+        "fullname": "Smit Shah",
+        "username": "https://github,com/smit-sms"
+      },
+      {
+        "id":356,
+        "fullname": "Shivam",
+        "username": "https://github.com/shivamRamani"
+      },
+	    {
+        "id":357,
+        "fullname": "Nabeel Hussain M N",
+        "username": "https://github.com/nabeel001"
+      },
+	    {
+        "id":358,
+        "fullname": "Jonathan Meza",
+        "username": "https://github.com/jonma0107"
+      }
+
     ];
 
 
