changes in contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1877,7 +1877,7 @@
       },
       {
           "id": 346,
-          "fullname": "Ankush jagga",
+          "fullname": "Ankush Kuamr  jagga",
           "username": "https://github.com/AnkushJagga"
       },
 ];
