* Added search algorithm of value in a rotated array * Updated Contributions.html with credentials

--- a/Contributors.html
+++ b/Contributors.html
@@ -1956,7 +1956,12 @@
           "id":357,
           "fullname": "Nabeel Hussain M N",
           "username": "https://github.com/nabeel001"
-        }
+        },
+        {
+          "id": 358,
+          "fullname": "Anirudh Jwala",
+          "username": "https://github.com/anirudh-jwala"
+        },
     ];
 
 
