--- a/Contributors.html
+++ b/Contributors.html
@@ -1956,6 +1956,11 @@
           "id":357,
           "fullname": "Nabeel Hussain M N",
           "username": "https://github.com/nabeel001"
+        },
+	{
+          "id":358,
+          "fullname": "Chirag Arora",
+          "username": "https://github.com/Chirag8023"
         }
     ];
 
