Added new c++ program and updated Contributers.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1952,10 +1952,15 @@
           "fullname": "Shivam",
           "username": "https://github.com/shivamRamani"
         },
-	{
+	    {
           "id":357,
           "fullname": "Nabeel Hussain M N",
           "username": "https://github.com/nabeel001"
+        },
+	    {
+          "id":358,
+          "fullname": "Debdeep Ghosal",
+          "username": "https://github.com/Debdeepghosal"
         }
     ];
 
