[UPDATE] add details to contributions list
- add id, name, github username to contributions.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1961,6 +1961,11 @@
           "id":358,
           "fullname": "Avadhoot Kulkarni",
           "username": "https://github.com/AvadhootK"
+        },
+	{
+          "id":359,
+          "fullname": "Abiola Ayodele",
+          "username": "https://github.com/babboe1"
         }
     ];
 
