--- a/Contributors.html
+++ b/Contributors.html
@@ -1961,6 +1961,11 @@
           "id":358,
           "fullname": "Avadhoot Kulkarni",
           "username": "https://github.com/AvadhootK"
+        },
+        {
+          "id":359,
+          "fullname": "Nwanya Emmanuel",
+          "username": "https://github.com/emmydev9"
         }
     ];
 
