--- a/Contributors.html
+++ b/Contributors.html
@@ -1979,7 +1979,12 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
+	{
+	  "id":361,
+	  "fullname":"Aryan Mankame",
+	  "username": "https://github.com/AryanMankame"
+	}
     ];
 
 
