--- a/Contributors.html
+++ b/Contributors.html
@@ -1951,6 +1951,11 @@
           "id":356,
           "fullname": "Shivam",
           "username": "https://github.com/shivamRamani"
+        },
+         {
+          "id":357,
+          "fullname": "Prince Chimaobi",
+          "username": "https://github.com/chimoski"
         }
     ];
 
