--- a/Contributors.html
+++ b/Contributors.html
@@ -1984,6 +1984,12 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
+        },
+	{
+          "id":361,
+          "fullname": "Thomas Mort",
+          "username": "https://github.com/ThomasMORTsae"
+
         }
     ];
 
