added rabin-carp algorithm in c++

--- a/Contributors.html
+++ b/Contributors.html
@@ -1973,6 +1973,7 @@
           "id":358,
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
+        },
 
         {
           "id":359,
@@ -1984,6 +1985,11 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
+        },
+        {
+            "id":361,
+          "fullname": "Sumit Kumar",
+          "username": "https://github.com/sumitkr2000"
         }
     ];
 
