I have contributed in contributors

--- a/Contributors.html
+++ b/Contributors.html
@@ -1,9 +1,4 @@
 
-      {
-	  "id": 348,
-	  "fullname": "Smit Shah",
-	  "username": "https://github.com/smit-sms"
-      }
 
 <!DOCTYPE html>
 <html lang="en">
@@ -1886,6 +1881,7 @@
           "fullname": "Ankush jagga",
           "username": "https://github.com/AnkushJagga"
       },
+      
       {
 
         "id":348,
@@ -1903,7 +1899,7 @@
         "id" : 349,
         "full name": "Rajpreet Kaur",
         "username": "https://github.com/Rajpreetkaur02"
-      }
+      },
 
       
       {
@@ -1980,17 +1976,24 @@
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
 
+        },
         {
           "id":359,
           "fullname": "Avadhoot Kulkarni",
           "username": "https://github.com/AvadhootK"
         },
-	{
+	    {
           "id":360,
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
+
+        {
+            "id":361,
+            "fullname": "Harsh Raj",
+            "username": "https://github.com/developerHarshRaj"
+        },
 
     ];
 
