added my account

--- a/Contributors.html
+++ b/Contributors.html
@@ -1971,7 +1971,12 @@
           "id":359,
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
-        }
+        },
+      {
+        "id":360,
+        "fullname": "Aurélie Bayre",
+        "username": "https://github.com/AurelieBayre"
+      }
     ];
 
 
