--- a/Contributors.html
+++ b/Contributors.html
@@ -1991,6 +1991,12 @@
           "username": "https://github.com/babboe1"
 
         }
+          {
+          "id":1,
+          "fullname": "iLorah",
+          "username": "https://github.com/iLorah"
+
+        }
 
     ];
 
