Updated my name

--- a/Contributors.html
+++ b/Contributors.html
@@ -1996,6 +1996,10 @@
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
         }
+	{  "id:362,
+	   "fullname": "Priya Rawat"
+	   "username":	"https://github.com/Priya19999"
+	}
 
     ];
 
