--- a/Contributors.html
+++ b/Contributors.html
@@ -1903,7 +1903,7 @@
         "id" : 349,
         "full name": "Rajpreet Kaur",
         "username": "https://github.com/Rajpreetkaur02"
-      }
+      },
 
       
       {
@@ -1979,7 +1979,7 @@
           "id":358,
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
-    
+        },
         {
           "id":359,
           "fullname": "Avadhoot Kulkarni",
@@ -1990,11 +1990,16 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
         {
             "id":361,
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
+        },
+        {
+            "id":362,
+           "fullname": "Virendra Kumar",
+           "username": "https://github.com/Virendra-94"
         }
 
     ];
