added my account

--- a/Contributors.html
+++ b/Contributors.html
@@ -1990,7 +1990,13 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
+      {
+        "id":361,
+        "fullname": "Aurélie Bayre",
+        "username": "https://github.com/AurelieBayre"
+      }
+
 
     ];
 
